# telegram-agent

./: .gitignore  LICENSE  README.md  app.py  manager.py  pyproject.toml
docsearch/: docsearch_chat_agent.py
telegram/: embeds.py  telegram_chat_agent.py  telegram_scrapper.py
telegram/msg_db/: database.py  db_operator.py  models.py  msg_service.py  schemas.py
websearch/: web_chat_agent.py  web_scrapper.py
