[project]
name = "agent-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "Artem Shamro, email = <adshamro@edu.hse.ru>"}]
requires-python = ">=3.10.12"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "ddgs>=9.5.5",
    "gigachat>=0.1.42.post2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-gigachat>=0.3.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "nest-asyncio>=1.6.0",
    "pypdf>=6.0.0",
    "pyrogram>=2.0.106",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "telethon>=1.41.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
